data/derived/fa15/progs/unify/prog3638.ml.out
Characters 105-109:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int -> int
       Type int is not compatible with type int -> int 
